--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/native": "^7.0.0-rc.19",
+    "@react-navigation/native-stack": "^7.0.0-rc.27",
     "expo": "~51.0.28",
+    "expo-build-properties": "~0.12.5",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.75.3",
     "react-native-paper": "^5.12.5",
-    "expo-build-properties": "~0.12.5"
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "3.31.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
