--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "expo-build-properties": "~0.12.5",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
-    "react-native": "0.75.3",
+    "react-native": "~0.75.0",
     "react-native-paper": "^5.12.5",
     "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1"
+    "react-native-screens": "~3.34.0",
+    "react-native-reanimated": "~3.15.0",
+    "react-native-gesture-handler": "~2.18.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
